packages/dartcv/src/core/mat.h

CvStatus* cv_Mat_zeros(int rows, int cols, int type, Mat* rval, CvCallback_0 callback);
CvStatus* cv_Mat_toVecPoint(Mat self, VecPoint* vec, CvCallback_0 callback);
CvStatus* cv_Mat_toVecPoint2f(Mat self, VecPoint2f* vec, CvCallback_0 callback);
CvStatus* cv_Mat_toVecPoint3f(Mat self, VecPoint3f* vec, CvCallback_0 callback);
CvStatus* cv_Mat_toVecPoint3i(Mat self, VecPoint3i* vec, CvCallback_0 callback);
CvStatus* cv_Mat_toFmtString(
    Mat self,
    int fmtType,
    int f16Precision,
    int f32Precision,
    int f64Precision,
    bool multiLine,
    char** rval
);
int cv_Mat_type(Mat self);
size_t cv_Mat_total(Mat self);
CvStatus* cv_Mat_toVecUChar(Mat self, VecUChar* rval, CvCallback_0 callback);
CvStatus* cv_Mat_toVecChar(Mat self, VecChar* rval, CvCallback_0 callback);