packages/dartcv/src/core/core.h

//cv::PCABackProject (InputArray data, InputArray mean, InputArray eigenvectors, OutputArray result)
CvStatus* cv_PCABackProject(
    Mat data, Mat mean, Mat eigenvectors, Mat result, CvCallback_0 callback
);
CvStatus* cv_PCACompute(
    Mat src, Mat mean, Mat eigenvectors, Mat eigenvalues, int maxComponents, CvCallback_0 callback
);
// cv::PCACompute (InputArray data, InputOutputArray mean, OutputArray eigenvectors, OutputArray eigenvalues, double retainedVariance)
CvStatus* cv_PCACompute_1(
    Mat src,
    Mat mean,
    Mat eigenvectors,
    Mat eigenvalues,
    double retainedVariance,
    CvCallback_0 callback
);
// cv::PCAProject (InputArray data, InputArray mean, InputArray eigenvectors, OutputArray result)
CvStatus* cv_PCAProject(Mat data, Mat mean, Mat eigenvectors, Mat result, CvCallback_0 callback);
//double cv::PSNR (InputArray src1, InputArray src2, double R=255.)
CvStatus* cv_PSNR(Mat src1, Mat src2, double R, double* rval, CvCallback_0 callback);
CvStatus* cv_RNG_create(RNG* rval);
CvStatus* cv_RNG_create_1(uint64_t state, RNG* rval);
void cv_RNG_close(RNGPtr rng);
CvStatus* cv_RNG_fill(
    RNG rng, Mat mat, int distType, double a, double b, bool saturateRange, CvCallback_0 callback
);
CvStatus* cv_RNG_gaussian(RNG rng, double sigma, double* rval);
CvStatus* cv_RNG_uniform(RNG rng, int a, int b, int* rval);
CvStatus* cv_RNG_next(RNG rng, uint32_t* rval);