packages/dartcv/lib/src/g/core.g.dart


  ffi.Pointer<CvStatus> cv_Mat_toFmtString(
    Mat self,
    int fmtType,
    int f16Precision,
    int f32Precision,
    int f64Precision,
    bool multiLine,
    ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
  ) {
    return _cv_Mat_toFmtString(
      self,
      fmtType,
      f16Precision,
      f32Precision,
      f64Precision,
      multiLine,
      rval,
    );
  }

  late final _cv_Mat_toFmtStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Bool,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('cv_Mat_toFmtString');
  late final _cv_Mat_toFmtString = _cv_Mat_toFmtStringPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, int, bool, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<CvStatus> cv_Mat_toVecChar(
    Mat self,
    ffi.Pointer<VecChar> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_toVecChar(
      self,
      rval,
      callback,
    );
  }

  late final _cv_Mat_toVecCharPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecChar>,
              imp1.CvCallback_0)>>('cv_Mat_toVecChar');
  late final _cv_Mat_toVecChar = _cv_Mat_toVecCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<VecChar>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_toVecPoint(
    Mat self,
    ffi.Pointer<VecPoint> vec,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_toVecPoint(
      self,
      vec,
      callback,
    );
  }

  late final _cv_Mat_toVecPointPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint>,
              imp1.CvCallback_0)>>('cv_Mat_toVecPoint');
  late final _cv_Mat_toVecPoint = _cv_Mat_toVecPointPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<VecPoint>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_toVecPoint2f(
    Mat self,
    ffi.Pointer<VecPoint2f> vec,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_toVecPoint2f(
      self,
      vec,
      callback,
    );
  }

  late final _cv_Mat_toVecPoint2fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint2f>,
              imp1.CvCallback_0)>>('cv_Mat_toVecPoint2f');
  late final _cv_Mat_toVecPoint2f = _cv_Mat_toVecPoint2fPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<VecPoint2f>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_toVecPoint3f(
    Mat self,
    ffi.Pointer<VecPoint3f> vec,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_toVecPoint3f(
      self,
      vec,
      callback,
    );
  }

  late final _cv_Mat_toVecPoint3fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint3f>,
              imp1.CvCallback_0)>>('cv_Mat_toVecPoint3f');
  late final _cv_Mat_toVecPoint3f = _cv_Mat_toVecPoint3fPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<VecPoint3f>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_toVecPoint3i(
    Mat self,
    ffi.Pointer<VecPoint3i> vec,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_toVecPoint3i(
      self,
      vec,
      callback,
    );
  }

  late final _cv_Mat_toVecPoint3iPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecPoint3i>,
              imp1.CvCallback_0)>>('cv_Mat_toVecPoint3i');
  late final _cv_Mat_toVecPoint3i = _cv_Mat_toVecPoint3iPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<VecPoint3i>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_Mat_toVecUChar(
    Mat self,
    ffi.Pointer<VecUChar> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_toVecUChar(
      self,
      rval,
      callback,
    );
  }

  late final _cv_Mat_toVecUCharPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecUChar>,
              imp1.CvCallback_0)>>('cv_Mat_toVecUChar');
  late final _cv_Mat_toVecUChar = _cv_Mat_toVecUCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, ffi.Pointer<VecUChar>, imp1.CvCallback_0)>();

  int cv_Mat_total(
    Mat self,
  ) {
    return _cv_Mat_total(
      self,
    );
  }

  late final _cv_Mat_totalPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(Mat)>>('cv_Mat_total');
  late final _cv_Mat_total =
      _cv_Mat_totalPtr.asFunction<int Function(Mat)>(isLeaf: true);

  int cv_Mat_type(
    Mat self,
  ) {
    return _cv_Mat_type(
      self,
    );
  }

  late final _cv_Mat_typePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('cv_Mat_type');
  late final _cv_Mat_type =
      _cv_Mat_typePtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> cv_Mat_zeros(
    int rows,
    int cols,
    int type,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_Mat_zeros(
      rows,
      cols,
      type,
      rval,
      callback,
    );
  }

  late final _cv_Mat_zerosPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_Mat_zeros');
  late final _cv_Mat_zeros = _cv_Mat_zerosPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          int, int, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_PCABackProject(
    Mat data,
    Mat mean,
    Mat eigenvectors,
    Mat result,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_PCABackProject(
      data,
      mean,
      eigenvectors,
      result,
      callback,
    );
  }

  late final _cv_PCABackProjectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, imp1.CvCallback_0)>>('cv_PCABackProject');
  late final _cv_PCABackProject = _cv_PCABackProjectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_PCACompute(
    Mat src,
    Mat mean,
    Mat eigenvectors,
    Mat eigenvalues,
    int maxComponents,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_PCACompute(
      src,
      mean,
      eigenvectors,
      eigenvalues,
      maxComponents,
      callback,
    );
  }

  late final _cv_PCAComputePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Int,
              imp1.CvCallback_0)>>('cv_PCACompute');
  late final _cv_PCACompute = _cv_PCAComputePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, Mat, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_PCACompute_1(
    Mat src,
    Mat mean,
    Mat eigenvectors,
    Mat eigenvalues,
    double retainedVariance,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_PCACompute_1(
      src,
      mean,
      eigenvectors,
      eigenvalues,
      retainedVariance,
      callback,
    );
  }

  late final _cv_PCACompute_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Double,
              imp1.CvCallback_0)>>('cv_PCACompute_1');
  late final _cv_PCACompute_1 = _cv_PCACompute_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, Mat, double, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_PCAProject(
    Mat data,
    Mat mean,
    Mat eigenvectors,
    Mat result,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_PCAProject(
      data,
      mean,
      eigenvectors,
      result,
      callback,
    );
  }

  late final _cv_PCAProjectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, imp1.CvCallback_0)>>('cv_PCAProject');
  late final _cv_PCAProject = _cv_PCAProjectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_PSNR(
    Mat src1,
    Mat src2,
    double R,
    ffi.Pointer<ffi.Double> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_PSNR(
      src1,
      src2,
      R,
      rval,
      callback,
    );
  }

  late final _cv_PSNRPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double,
              ffi.Pointer<ffi.Double>, imp1.CvCallback_0)>>('cv_PSNR');
  late final _cv_PSNR = _cv_PSNRPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, ffi.Pointer<ffi.Double>, imp1.CvCallback_0)>();

  void cv_RNG_close(
    imp1.RNGPtr rng,
  ) {
    return _cv_RNG_close(
      rng,
    );
  }

  late final _cv_RNG_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(imp1.RNGPtr)>>(
          'cv_RNG_close');
  late final _cv_RNG_close =
      _cv_RNG_closePtr.asFunction<void Function(imp1.RNGPtr)>();

  ffi.Pointer<CvStatus> cv_RNG_create(
    ffi.Pointer<RNG> rval,
  ) {
    return _cv_RNG_create(
      rval,
    );
  }

  late final _cv_RNG_createPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<RNG>)>>(
      'cv_RNG_create');
  late final _cv_RNG_create = _cv_RNG_createPtr
      .asFunction<ffi.Pointer<CvStatus> Function(ffi.Pointer<RNG>)>();

  ffi.Pointer<CvStatus> cv_RNG_create_1(
    int state,
    ffi.Pointer<RNG> rval,
  ) {
    return _cv_RNG_create_1(
      state,
      rval,
    );
  }

  late final _cv_RNG_create_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Uint64, ffi.Pointer<RNG>)>>('cv_RNG_create_1');
  late final _cv_RNG_create_1 = _cv_RNG_create_1Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(int, ffi.Pointer<RNG>)>();

  ffi.Pointer<CvStatus> cv_RNG_fill(
    RNG rng,
    Mat mat,
    int distType,
    double a,
    double b,
    bool saturateRange,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_RNG_fill(
      rng,
      mat,
      distType,
      a,
      b,
      saturateRange,
      callback,
    );
  }

  late final _cv_RNG_fillPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(RNG, Mat, ffi.Int, ffi.Double,
              ffi.Double, ffi.Bool, imp1.CvCallback_0)>>('cv_RNG_fill');
  late final _cv_RNG_fill = _cv_RNG_fillPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          RNG, Mat, int, double, double, bool, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_RNG_gaussian(
    RNG rng,
    double sigma,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _cv_RNG_gaussian(
      rng,
      sigma,
      rval,
    );
  }

  late final _cv_RNG_gaussianPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              RNG, ffi.Double, ffi.Pointer<ffi.Double>)>>('cv_RNG_gaussian');
  late final _cv_RNG_gaussian = _cv_RNG_gaussianPtr.asFunction<
      ffi.Pointer<CvStatus> Function(RNG, double, ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> cv_RNG_next(
    RNG rng,
    ffi.Pointer<ffi.Uint32> rval,
  ) {
    return _cv_RNG_next(
      rng,
      rval,
    );
  }

  late final _cv_RNG_nextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              RNG, ffi.Pointer<ffi.Uint32>)>>('cv_RNG_next');
  late final _cv_RNG_next = _cv_RNG_nextPtr.asFunction<
      ffi.Pointer<CvStatus> Function(RNG, ffi.Pointer<ffi.Uint32>)>();

  ffi.Pointer<CvStatus> cv_RNG_uniform(
    RNG rng,
    int a,
    int b,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _cv_RNG_uniform(
      rng,
      a,
      b,
      rval,
    );
  }
